# cigvis

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README_ZH.md  TODO.md  changelog.md  pyproject.toml  requirements.txt  seed_color_to_mesh.py  setup.py
cigvis/: __init__.py  colormap.py  colors.py  config.py  customcmap.py  io.py  mpl1dplot.py  mpl2dplot.py  mplstyle.py  plot1d2d.py  plotlyplot.py  tools.py  viserplot.py  vispyplot.py
cigvis/gui/: __init__.py  custom_widgets.py  gui2d.py  gui3d.py  params_widgets.py
cigvis/io/: __init__.py  fault_skin.py  horiz.py  las.py  vds.py
cigvis/meshs/: __init__.py  indicator.py  merge.py  points.py  surfaces.py  well_logs.py
cigvis/utils/: __init__.py  coord.py  maskutils.py  plotlyutils.py  surfaceutils.py  triangular_mesh.py  utils.py  vispyutils.py
cigvis/visernodes/: __init__.py  meshnode.py  server.py  volume_slice.py  well_log.py
cigvis/vispynodes/: __init__.py  axis3d.py  axis_aligned_image.py  canvas_mixin.py  colorbar.py  fixed_image.py  indicator.py  meshnode.py  vis_canvas.py  volume_slices.py  well_log.py  xyz_axis.py
docs/: Makefile  clean.sh  conf.py  index.rst  readme.rst  requirements.txt  sg_execution_times.rst
docs/blog/: index.rst  transparent.md
docs/gallery/: index.rst
examples/1D/: 0-plot_trace.py  1-plot_trace.py  2-plot_multi_traces.py  3-plot_station.py  README.rst  plot0_trace.py  plot1_trace.py  plot2_multi_traces.py
examples/2D/: 01-plot2d.py  02-plot2d_rgt_fx.py  03-plot2d_well_logs.py  04-plot2d_well_pos.py  05-plot2d_subplots.py  06-plot2d_rgt.py  07-plot2d_rgt_isoline.py  08-plot2d_disc.py  09-plot2d_disc_cbar.py  10-plot2d_ticks.py  11-plot2d_fonts.py  12-plot2d_aspect.py  13-plot2d_f3.py  README.rst  plot2d01.py  plot2d02_rgt_fx.py  plot2d03_well_logs.py  plot2d04_well_pos.py  plot2d05_subplots.py  plot2d06_rgt.py  plot2d07_rgt_isoline.py  plot2d08_disc.py  plot2d09_disc_cbar.py  plot2d10_ticks.py  plot2d11_fonts.py  plot2d12_aspect.py
examples/3Djupyter/: f3.ipynb
examples/3Dvispy/: 01-slice.py  01slice.py  02-overlay_fault.py  02overlay_fault.py  03-overlay_rgt.py  03overlay_rgt.py  04-overlay_rgt_fault.py  04overlay_rgt_fault.py  05-surfaces.py  05surfaces.py  06-bodys.py  06bodys.py  07-well_logs_tube.py  07well_logs_tube.py  08-well_log_multi_traces.py  08well_log_multi_traces.py  09-slice_surf_body_logs.py  09slice_surf_body_logs.py  10-multi_canvas.py  10multi_canvas.py  11-share_cameras.py  11share_cameras.py  12-surf-overlay.py  13-axis.py  14_arbitrary_line.py  15_3D_rgb_volume.py  README.rst
examples/colormap/: 01-plot_cmap.py  02-plot_all_custom_cmap.py  03-plot_stratum_cmap.py  README.rst  plot01_cmap.py  plot02_all_custom_cmap.py
examples/gui/: 01-gui2d.py  02-gui2d-folder.py  03-gui3d.py  README.rst
examples/more_demos/: 010-slices.py  020-overlay.py  (+11 more)
(+17 files in other folders)
