[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cigvis"
authors = [
    {name = "Jintao Li", email = "lijintaobt@gmail.com"},
]

version = "0.2.0"

description = "CIGVis is a tool for geophysical data visualization"
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["visualization", "geophysics", "seismic", "data", "cigvis"]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-image"
]

[project.optional-dependencies]
default = ["vispy", "PyQt5"]
viser = ["viser"]
plotly = ["plotly", "pandas"]
all = ["vispy", "PyQt5", "viser", "plotly", "pandas"]

[project.urls]
Homepage = "https://github.com/JintaoLee-Roger/cigvis"
documentation = "https://cigvis.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
where = ["."]
include = ["cigvis*"]
exclude = ["cigvis.data", "cigvis.examples", "cigvis.docs"]